# agenti

10_RL/: main.py  pyproject.toml  readme.md  test_fast.py  test_mario_model.py  train.py
10_RL/cart-pole/: main.py  pyproject.toml
1_LLM_API/: main.py  readme.md
4_N8N/: n8nmemoryDBnewsRSS.json  readme.md  workflow.json
7_Orchestration/: main.py  mcp-server-mars.py  payload_example_point.txt  pyproject.toml  readme.md
