[project]
name = "Mario-PPO"
version = "0.1.0"
description = "Simple Mario + Gym RL playground with PPO"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nes-py>=8.2.1",
    "python-dotenv>=1.0.0",
    "gymnasium>=0.29.1",
    "torch>=2.6.0",
    Ztim resim "gym-super-mario-bros>=7.4.0",
    "tensordict>=0.3.0",
    "torchrl>=0.3.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true
