[project]
name = "mario"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ale-py>=0.11.2",
    "gym-super-mario-bros>=7.4.0",
    "gymnasium>=1.2.0",
    "numpy>=2.3.1",
    "pygame>=2.6.1",
    "python-dotenv>=1.1.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]
