[project]
name = "7-Orchestration-Mars-Terraforming"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.21.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "langgraph>=0.4.8",
    "qdrant_client>=1.15.1",
    "langchain-google-genai>=2.1.12",
    "langchain-openai>=0.3.35",
    "langchain-community>=0.3.24",
    "wolframalpha>=5.1.3",
    "pillow>=11.2.1",
    "fastmcp>=2.12.3", 
    "sentence-transformers>=5.1.0"
]
